--- a/resume_matching.ipynb
+++ b/resume_matching.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "yr0EAvWqMCx5"
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "id": "tG3WZeDYMF8h"
    },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "id": "oI-rcTFWMHTk"
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "6-pM24SBMNse"
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -455,65 +455,65 @@
      "output_type": "stream",
      "text": [
       "Processing file 1/30: sampled_data\\FINANCE\\12071138.pdf\n",
-      "Started parsing the file under job_id bcb013cf-6493-406b-8987-e8e23bd3ee93\n",
+      "Started parsing the file under job_id a8241a7f-d168-4fc0-9a67-fd45cecf17d8\n",
       "Processing file 2/30: sampled_data\\FINANCE\\14408510.pdf\n",
-      "Started parsing the file under job_id d0f2ea29-cd89-4068-980c-e440a92277ea\n",
+      "Started parsing the file under job_id 60c620ab-8854-4073-94e9-f451166d57df\n",
       "Processing file 3/30: sampled_data\\FINANCE\\15891494.pdf\n",
-      "Started parsing the file under job_id 41ff28fe-e27e-4a18-b359-d2adefb2305d\n",
+      "Started parsing the file under job_id 91df3704-9234-438c-9bee-00749e3270fb\n",
       "Processing file 4/30: sampled_data\\FINANCE\\19540089.pdf\n",
-      "Started parsing the file under job_id 231f6d05-3d94-48af-8ae2-3c419ab8aa95\n",
-      "Processing file 5/30: sampled_data\\FINANCE\\24967652.pdf\n",
-      "Started parsing the file under job_id 8fe3048f-982c-4009-9b91-935960dc8766\n",
+      "Started parsing the file under job_id 8c735bfc-3ae9-45c3-9bc4-d36e02133feb\n",
+      ".Processing file 5/30: sampled_data\\FINANCE\\24967652.pdf\n",
+      "Started parsing the file under job_id c55c8685-81b4-4776-a97e-b4e20fb666a5\n",
       "Processing file 6/30: sampled_data\\FINANCE\\25101183.pdf\n",
-      "Started parsing the file under job_id 4ff2db82-471d-4d86-a614-307f3ce78795\n",
+      "Started parsing the file under job_id 25a47859-7597-4634-8a08-0eecb6163cfd\n",
       "Processing file 7/30: sampled_data\\FINANCE\\26961846.pdf\n",
-      "Started parsing the file under job_id d9e9e7bf-8d6b-43b4-be30-8dcc7ed9f421\n",
+      "Started parsing the file under job_id f04110d3-92cc-4872-a8c9-96e080534d31\n",
       "Processing file 8/30: sampled_data\\FINANCE\\28398216.pdf\n",
-      "Started parsing the file under job_id 72e57e87-7bfc-4c32-9255-6a2ec4d962c3\n",
+      "Started parsing the file under job_id b5d4d38b-e7ce-4d49-a46f-01219e4dcefe\n",
       "Processing file 9/30: sampled_data\\FINANCE\\38907798.pdf\n",
-      "Started parsing the file under job_id 5a178b7a-9ab8-4e00-ba6d-8764f8dc1b02\n",
+      "Started parsing the file under job_id ef41129c-cee2-408c-bca0-a05d68199ada\n",
       "Processing file 10/30: sampled_data\\FINANCE\\84373843.pdf\n",
-      "Started parsing the file under job_id eae396fa-ab27-4b2c-b4b2-b46805993932\n",
+      "Started parsing the file under job_id e8b3b7da-e62a-435e-b9f2-08b12ee89b44\n",
       "Processing file 11/30: sampled_data\\IT\\16899268.pdf\n",
-      "Started parsing the file under job_id e23e0caa-4027-4a18-acfa-7d08053c8b58\n",
+      "Started parsing the file under job_id 9025aaf6-240c-49b3-be55-e2cf447cebec\n",
       "Processing file 12/30: sampled_data\\IT\\17641670.pdf\n",
-      "Started parsing the file under job_id 41e1d557-f909-48ef-8825-05d6f597b29f\n",
+      "Started parsing the file under job_id 0e4b958e-7ee4-4918-ba78-7d1786512eb0\n",
       "Processing file 13/30: sampled_data\\IT\\18159866.pdf\n",
-      "Started parsing the file under job_id 213a9910-436d-4b1d-b32b-72445c59bc93\n",
+      "Started parsing the file under job_id 7f6444a0-5ed1-4630-a340-515605f4606d\n",
       "Processing file 14/30: sampled_data\\IT\\23527321.pdf\n",
-      "Started parsing the file under job_id 9b6e8674-532a-41e0-8a80-df1ed091d39e\n",
+      "Started parsing the file under job_id 226c9c47-7a65-4cc1-aeef-797c7ee275ca\n",
       "Processing file 15/30: sampled_data\\IT\\25959103.pdf\n",
-      "Started parsing the file under job_id d6ba2f4f-1b9a-4405-8a4c-ef8e89b09138\n",
+      "Started parsing the file under job_id 5e3a3657-8e40-464d-9e61-3f4866b789ea\n",
       "Processing file 16/30: sampled_data\\IT\\27536013.pdf\n",
-      "Started parsing the file under job_id 68feb478-6cfe-4579-a04a-63cd19ae929d\n",
+      "Started parsing the file under job_id 63efd6f1-3f7e-4bde-8859-ce62b7893aaf\n",
       "Processing file 17/30: sampled_data\\IT\\38753827.pdf\n",
-      "Started parsing the file under job_id d4977ee6-8aeb-448d-a3d8-7dcb549d1b63\n",
+      "Started parsing the file under job_id 4352e885-3799-4e54-8fc5-ad76b7c2daf3\n",
       "Processing file 18/30: sampled_data\\IT\\52246737.pdf\n",
-      "Started parsing the file under job_id 97063143-1958-48c3-888d-e362a76b6ce5\n",
+      "Started parsing the file under job_id 9bb3a237-4b7b-4ba5-8444-2c520a31bf03\n",
       "Processing file 19/30: sampled_data\\IT\\52618188.pdf\n",
-      "Started parsing the file under job_id fffaf171-5557-46d5-9369-1661a4ea7bec\n",
+      "Started parsing the file under job_id b67ee2cc-7e58-46d6-85ed-c4f8235a6e49\n",
       "Processing file 20/30: sampled_data\\IT\\57002858.pdf\n",
-      "Started parsing the file under job_id 82ee671f-f583-48a1-a226-f9a37de9bf4d\n",
+      "Started parsing the file under job_id a65acb8e-bf94-47a3-a96f-f5a315ea52bf\n",
       "Processing file 21/30: sampled_data\\SALES\\12696104.pdf\n",
-      "Started parsing the file under job_id 7aa9eb81-ca05-445d-b165-17d335185a55\n",
+      "Started parsing the file under job_id 72020784-bf87-461a-b8ca-1ac8635aa295\n",
       "Processing file 22/30: sampled_data\\SALES\\17509935.pdf\n",
-      "Started parsing the file under job_id 0e14085e-9d45-49b1-b6c4-bfefce988dcd\n",
+      "Started parsing the file under job_id f27bfcfd-1f38-487e-92d3-a3ed55283c41\n",
       "Processing file 23/30: sampled_data\\SALES\\17704246.pdf\n",
-      "Started parsing the file under job_id 98ce06e2-d0f7-4393-b855-ede1fdfc0fc1\n",
+      "Started parsing the file under job_id a6204b58-5e5f-4441-8603-a9e5c99de4f8\n",
       "Processing file 24/30: sampled_data\\SALES\\19473948.pdf\n",
-      "Started parsing the file under job_id c0c42ef3-eb7d-48f9-a866-b8f3b4d147ae\n",
+      "Started parsing the file under job_id a0aa31ec-56ac-47f7-8da7-5751da597296\n",
       "Processing file 25/30: sampled_data\\SALES\\25315791.pdf\n",
-      "Started parsing the file under job_id 6a3c6bad-c007-4f4b-8298-357e11cc076f\n",
+      "Started parsing the file under job_id 95ef73c6-7314-42b4-906b-0e5f90bbef2e\n",
       "Processing file 26/30: sampled_data\\SALES\\28198029.pdf\n",
-      "Started parsing the file under job_id e0454109-c76d-4043-aa43-cfb7527feca7\n",
+      "Started parsing the file under job_id cedeb2b7-329f-4a4f-b021-1427a22e0ab7\n",
       "Processing file 27/30: sampled_data\\SALES\\30608780.pdf\n",
-      "Started parsing the file under job_id 3b0e6b37-8aeb-4bfa-b036-17aefc0fc509\n",
+      "Started parsing the file under job_id 8ee5ebe5-4ad0-4c33-bccd-319f2a2dc529\n",
       "Processing file 28/30: sampled_data\\SALES\\31199035.pdf\n",
-      "Started parsing the file under job_id 6effd180-6eba-4965-ba33-805aa167f9d9\n",
+      "Started parsing the file under job_id 57678167-b981-4fc8-b996-250aea2a2a89\n",
       "Processing file 29/30: sampled_data\\SALES\\33236701.pdf\n",
-      "Started parsing the file under job_id c8a28d88-24d0-4ba6-a6ab-8d4ddfd728a9\n",
+      "Started parsing the file under job_id 5d70f2ba-57f9-4af1-9c2e-1f0060612223\n",
       "Processing file 30/30: sampled_data\\SALES\\55097118.pdf\n",
-      "Started parsing the file under job_id b1d3f9d6-2d2b-4261-8823-a2d473870fc6\n"
+      "Started parsing the file under job_id f5568261-6b1f-4a5b-970b-68c2b8347db0\n"
      ]
     }
    ],
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "jvdY7FLeMbL9"
    },
@@ -567,11 +567,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "id": "cLh_E7AyMdsq"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ApiError",
+     "evalue": "status_code: 400, body: {'detail': 'We encountered an error while validating the embedding connection. Please check the credentials and try again.'}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mApiError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 19\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Transformation auto config\u001b[39;00m\n\u001b[0;32m     11\u001b[0m transform_config \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmode\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconfig\u001b[39m\u001b[38;5;124m'\u001b[39m: {\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     16\u001b[0m     }\n\u001b[0;32m     17\u001b[0m }\n\u001b[1;32m---> 19\u001b[0m client, pipeline \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_llamacloud_pipeline\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mresume_matching\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43membedding_config\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransform_config\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[4], line 85\u001b[0m, in \u001b[0;36mcreate_llamacloud_pipeline\u001b[1;34m(pipeline_name, embedding_config, transform_config, data_sink_id)\u001b[0m\n\u001b[0;32m     76\u001b[0m client \u001b[38;5;241m=\u001b[39m LlamaCloud(token\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLLAMA_CLOUD_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m     78\u001b[0m pipeline \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     79\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m: pipeline_name,\n\u001b[0;32m     80\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtransform_config\u001b[39m\u001b[38;5;124m'\u001b[39m: transform_config,\n\u001b[0;32m     81\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124membedding_config\u001b[39m\u001b[38;5;124m'\u001b[39m: embedding_config,\n\u001b[0;32m     82\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata_sink_id\u001b[39m\u001b[38;5;124m'\u001b[39m: data_sink_id\n\u001b[0;32m     83\u001b[0m }\n\u001b[1;32m---> 85\u001b[0m pipeline \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpipelines\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupsert_pipeline\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrequest\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpipeline\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     87\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m client, pipeline\n",
+      "File \u001b[1;32mc:\\Users\\runqz\\anaconda3\\envs\\LLM\\Lib\\site-packages\\llama_cloud\\resources\\pipelines\\client.py:187\u001b[0m, in \u001b[0;36mPipelinesClient.upsert_pipeline\u001b[1;34m(self, project_id, organization_id, request)\u001b[0m\n\u001b[0;32m    185\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError:\n\u001b[0;32m    186\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ApiError(status_code\u001b[38;5;241m=\u001b[39m_response\u001b[38;5;241m.\u001b[39mstatus_code, body\u001b[38;5;241m=\u001b[39m_response\u001b[38;5;241m.\u001b[39mtext)\n\u001b[1;32m--> 187\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m ApiError(status_code\u001b[38;5;241m=\u001b[39m_response\u001b[38;5;241m.\u001b[39mstatus_code, body\u001b[38;5;241m=\u001b[39m_response_json)\n",
+      "\u001b[1;31mApiError\u001b[0m: status_code: 400, body: {'detail': 'We encountered an error while validating the embedding connection. Please check the credentials and try again.'}"
+     ]
+    }
+   ],
    "source": [
     "# Embedding config\n",
     "embedding_config = {\n",
